@startuml
' Class diagram generated from project types and components
' Legend: interfaces are mapped from TypeScript interfaces/types

skinparam classAttributeIconSize 0

' --- Guest / Session ---
interface GuestProfile {
  +ageRange: string
  +nationality: string
  +travelPurpose: string
  +groupType: string
}

class GuestRegistrationForm {
  -hotelId: string
  -hotelName: string
  +onComplete(sessionId: string, profile: GuestProfile): void
}

GuestRegistrationForm --> GuestProfile : uses

' --- Session state and manager ---
interface Message {
  +role: string
  +content: string
}

interface SessionState {
  +sessionId: string
  +hotelId: string
  +conversationHistory: Message[]
  +guestProfile: GuestProfile | null
  +createdAt: number
  +lastActivity: number
}

class SessionStateManager <<service>> {
  +getState(sessionId: string): SessionState | null
  +setState(state: SessionState): void
  +updateHistory(sessionId: string, message: Message): void
  +createState(sessionId: string, hotelId: string, guestProfile?: GuestProfile | null): SessionState
  +deleteState(sessionId: string): void
  +sessionExists(sessionId: string): boolean
  +getOrCreateState(sessionId: string, hotelId: string, guestProfile?: GuestProfile | null): SessionState
  +updateGuestProfile(sessionId: string, guestProfile: GuestProfile): void
  +getSessionTTL(sessionId: string): number
  +extendSession(sessionId: string): void
}

SessionStateManager ..> SessionState : manages
SessionStateManager ..> Message : manipulates

' singleton instance
object sessionStateManager <<singleton>>
sessionStateManager -- SessionStateManager : instance of

' Redis dependency (implementation detail)
class RedisClient <<external>>
SessionStateManager ..> RedisClient : uses

' --- React components / error boundary ---
class ErrorBoundary <<React.Component>> {
  -state: { hasError: boolean; error?: Error }
  +getDerivedStateFromError(error: Error): { hasError: boolean; error?: Error }
  +componentDidCatch(error: Error, errorInfo: any): void
}

' --- Internationalization ---
interface LanguageContextValue {
  +language: string
  +setLanguage(lang): void
  +t(key: string): string
  +isRTL: boolean
}

class LanguageProvider {
  -language: string
  -dict: Record<string,string>
  +loadLanguage(lang): Promise<void>
  +setLanguage(lang): void
  +t(key: string): string
}

LanguageProvider ..|> LanguageContextValue

' --- Hotel settings (from types/hotel.ts and admin dashboard) ---
interface MealTime {
  +start: string
  +end: string
  +available: boolean
}

interface RestaurantSchedule {
  +breakfast: MealTime
  +lunch: MealTime
  +dinner: MealTime
}

interface SpaSettings {
  +available: boolean
  +openTime: string
  +closeTime: string
  +treatments: string[]
}

interface FacilityHours {
  +openTime: string
  +closeTime: string
  +available: boolean
}
interface KidsClubSettings {
  +openTime: string
  +closeTime: string
  +available: boolean
  +ageRange: string
}
KidsClubSettings --|> FacilityHours

interface SpecialEvent {
  +id: string
  +title: string
  +description: string
  +date: string
  +time: string
  +location: string
  +price?: string
}

interface ContactInfo {
  +phone: string
  +email: string
  +address: string
  +emergencyPhone: string
}

interface AmenitySettings {
  +available: boolean
  +password?: string
  +instructions?: string
  +price?: string
}

interface CheckInOutSettings {
  +time: string
  +instructions?: string
}

class HotelSettings {
  +name: string
  +restaurant: RestaurantSchedule
  +spa: SpaSettings
  +pool: FacilityHours
  +gym: FacilityHours
  +kidsClub: KidsClubSettings
  +specialEvents: SpecialEvent[]
  +contact: ContactInfo
  +wifi: AmenitySettings
  +parking: AmenitySettings
  +checkIn: CheckInOutSettings
  +checkOut: CheckInOutSettings
}

HotelSettings *-- RestaurantSchedule
HotelSettings *-- SpaSettings
HotelSettings *-- FacilityHours : pool, gym
HotelSettings *-- KidsClubSettings
HotelSettings *-- SpecialEvent
HotelSettings *-- ContactInfo
HotelSettings *-- AmenitySettings : wifi, parking
HotelSettings *-- CheckInOutSettings

' --- Additional data types ---
interface Hotel {
  +id: string
  +name: string
  +location: string
  +description: string
  +image: string
  +rating: number
  +tagline: string
}

interface HotelData {
  +name: string
  +location: string
  +description: string
  +image: string
  +color: string
  +coordinates: HotelCoordinates
  +facilities: Map
  +activities: HotelActivities
}

interface HotelCoordinates {
  +lat: number
  +lon: number
}

interface FacilityInfo {
  +open: string
  +close: string
  +type?: string
  +age_range?: string
}

interface HotelActivities {
  +family?: string[]
  +couples?: string[]
  +adventure?: string[]
  +cultural?: string[]
}

HotelData *-- HotelCoordinates
HotelData *-- FacilityInfo
HotelData *-- HotelActivities

' --- Database schema (from prisma migration.sql) ---
class hotels {
  +id: TEXT
  +hotelId: TEXT
  +name: TEXT
  +location: TEXT
  +description: TEXT
  +imageUrl: TEXT
  +color: TEXT
  +latitude: DOUBLE
  +longitude: DOUBLE
  +createdAt: TIMESTAMP
  +updatedAt: TIMESTAMP
}

class hotel_settings {
  +id: SERIAL
  +hotelId: TEXT
  +breakfastStart: TEXT
  +breakfastEnd: TEXT
  +breakfastAvailable: BOOLEAN
  +lunchStart: TEXT
  +lunchEnd: TEXT
  +lunchAvailable: BOOLEAN
  +dinnerStart: TEXT
  +dinnerEnd: TEXT
  +dinnerAvailable: BOOLEAN
  +spaAvailable: BOOLEAN
  +spaOpenTime: TEXT
  +spaCloseTime: TEXT
  +spaTreatments: TEXT[]
  +poolAvailable: BOOLEAN
  +poolOpenTime: TEXT
  +poolCloseTime: TEXT
  +gymAvailable: BOOLEAN
  +gymOpenTime: TEXT
  +gymCloseTime: TEXT
  +kidsClubAvailable: BOOLEAN
  +kidsClubOpenTime: TEXT
  +kidsClubCloseTime: TEXT
  +kidsClubAgeRange: TEXT
  +phone: TEXT
  +email: TEXT
  +address: TEXT
  +emergencyPhone: TEXT
  +wifiAvailable: BOOLEAN
  +wifiPassword: TEXT
  +wifiInstructions: TEXT
  +parkingAvailable: BOOLEAN
  +parkingPrice: TEXT
  +parkingInstructions: TEXT
  +checkinTime: TEXT
  +checkinInstructions: TEXT
  +checkoutTime: TEXT
  +checkoutInstructions: TEXT
  +createdAt: TIMESTAMP
  +updatedAt: TIMESTAMP
}

class special_events {
  +id: SERIAL
  +hotelId: TEXT
  +title: TEXT
  +description: TEXT
  +eventDate: TEXT
  +eventTime: TEXT
  +location: TEXT
  +price: TEXT
  +createdAt: TIMESTAMP
  +updatedAt: TIMESTAMP
}

class activities {
  +id: SERIAL
  +hotelId: TEXT
  +category: TEXT
  +activityName: TEXT
  +createdAt: TIMESTAMP
}

' --- DB relationships ---
hotels "1" -- "0..1" hotel_settings : has
hotels "1" -- "*" special_events : has
hotels "1" -- "*" activities : has

' --- Associations summary ---
GuestRegistrationForm --> SessionStateManager : creates session via API
GuestRegistrationForm --> sessionStateManager : may use
SessionState --> GuestProfile : contains
HotelSettings --> SpecialEvent : contains

@enduml
